moved files across and reorganised

--- a/spatial_reconstruction_of_QNMs.ipynb
+++ b/spatial_reconstruction_of_QNMs.ipynb
@@ -20,7 +20,6 @@
     "import qnmfitsrd as qnmfits\n",
     "from multiprocessing import Pool\n",
     "from spatial_reconstruction import *\n",
-    "from qnm_visualisation import qnm_viz\n",
     "from matplotlib.animation import FuncAnimation\n",
     "\n",
     "l_max = 6\n",
@@ -51,18 +50,28 @@
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:0305v5/Lev6/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n"
      ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'qnm_viz' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# TO DO: import data properly \u001b[39;00m\n\u001b[1;32m      2\u001b[0m sim \u001b[38;5;241m=\u001b[39m qnmfits\u001b[38;5;241m.\u001b[39mSXS(ID\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m305\u001b[39m, zero_time\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m2\u001b[39m))\n\u001b[0;32m----> 4\u001b[0m qnm_viz \u001b[38;5;241m=\u001b[39m \u001b[43mqnm_viz\u001b[49m(sim, l_max)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'qnm_viz' is not defined"
+     ]
     }
    ],
    "source": [
     "# TO DO: import data properly \n",
-    "sim = qnmfits.SXS(ID=305, zero_time=(2,2))\n",
     "\n",
-    "qnm_viz = qnm_viz(sim, l_max)"
+    "sim = qnmfits.SXS(ID=305, zero_time=(2,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,12 +143,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate spatial mismatch over time"
+    "## Calculate spatial mismatch over time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
