a few new tests

--- a/tests/bh_spin_reconstruction.ipynb
+++ b/tests/bh_spin_reconstruction.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Updated: 03/01/2024\n",
+    "\n",
+    "Looks at the mismatch of several black holes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
