mitman et al. updates/fixes

--- a/quadratic_checks.ipynb
+++ b/quadratic_checks.ipynb
@@ -406,14 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.17836453457778603 0.0074797330428946285 0.00010962859181324121\n"
+      "23.846377077217134\n",
+      "(0.9975542680999092+0j)\n",
+      "(14.127676754137427+2.1667685271158357j)\n",
+      "[[(0.9975542680999092+0j)], [(0.06898717895562242-0.010580596564950012j)], [(0.0036076962805379094-0.0011230639775349621j)]]\n"
      ]
     }
    ],
@@ -458,10 +461,18 @@
     "c_220_32 = abs(best_fit_32['C'][index_220])\n",
     "c_220_42 = abs(best_fit_42['C'][index_220])\n",
     "\n",
-    "print(c_220_22, c_220_32, c_220_42)\n",
+    "print(c_220_22/c_220_32)\n",
     "\n",
-    "indices_lists_l = [[lm_mode+mode for mode in [(2,2,0,1)]] for lm_mode in sim.h.keys()]\n",
-    "mu_lists = [qnm.mu_list(indices, sim.chif) for indices in indices_lists_l]\n",
+    "spherical_modes = [(2,2), (3,2), (4,2)]\n",
+    "\n",
+    "indices_lists_l = [[lm_mode+mode for mode in [(2,2,0,1)]] for lm_mode in spherical_modes]\n",
+    "mu_lists = [qnm.mu_list(indices, sim.chif_mag) for indices in indices_lists_l]\n",
+    "\n",
+    "print(mu_lists[0][0])\n",
+    "\n",
+    "print(mu_lists[0][0]/mu_lists[1][0])\n",
+    "\n",
+    "print(mu_lists)\n",
     "\n"
    ]
   }
