memory, CCE vs extrapolated & amplitude ratios

--- a/quadratic_checks.ipynb
+++ b/quadratic_checks.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +95,14 @@
       "    SXS:BBH:1502v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1502v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1502v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1502v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83.0M/83.0M [00:13<00:00, 6.39MB/s]\n"
+      "100%|██████████| 83.0M/83.0M [00:14<00:00, 6.13MB/s]\n"
      ]
     },
     {
@@ -113,14 +113,14 @@
       "    SXS:BBH:1476v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1476v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1476v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1476v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 80.4M/80.4M [00:12<00:00, 6.67MB/s]\n"
+      "100%|██████████| 80.4M/80.4M [00:13<00:00, 6.13MB/s]\n"
      ]
     },
     {
@@ -131,14 +131,14 @@
       "    SXS:BBH:1506v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1506v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1506v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1506v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 82.8M/82.8M [00:14<00:00, 6.07MB/s]\n"
+      "100%|██████████| 82.8M/82.8M [00:13<00:00, 6.51MB/s]\n"
      ]
     },
     {
@@ -149,14 +149,14 @@
       "    SXS:BBH:1508v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1508v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1508v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1508v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83.7M/83.7M [00:14<00:00, 6.10MB/s]\n"
+      "100%|██████████| 83.7M/83.7M [00:13<00:00, 6.61MB/s]\n"
      ]
     },
     {
@@ -167,14 +167,14 @@
       "    SXS:BBH:1474v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1474v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1474v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1474v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 81.5M/81.5M [00:13<00:00, 6.31MB/s]\n"
+      "100%|██████████| 81.5M/81.5M [00:13<00:00, 6.44MB/s]\n"
      ]
     },
     {
@@ -185,14 +185,14 @@
       "    SXS:BBH:1505v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1505v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1505v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1505v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 83.3M/83.3M [00:13<00:00, 6.53MB/s]\n"
+      "100%|██████████| 83.3M/83.3M [00:13<00:00, 6.69MB/s]\n"
      ]
     },
     {
@@ -203,14 +203,14 @@
       "    SXS:BBH:1504v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1504v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1504v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1504v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 84.4M/84.4M [00:14<00:00, 5.99MB/s]\n"
+      "100%|██████████| 84.4M/84.4M [00:13<00:00, 6.58MB/s]\n"
      ]
     },
     {
@@ -221,14 +221,14 @@
       "    SXS:BBH:1485v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1485v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1485v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1485v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 84.8M/84.8M [00:14<00:00, 6.21MB/s]\n"
+      "100%|██████████| 84.8M/84.8M [00:13<00:00, 6.64MB/s]\n"
      ]
     },
     {
@@ -239,14 +239,14 @@
       "    SXS:BBH:1486v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1486v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1486v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1486v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 86.5M/86.5M [00:14<00:00, 6.37MB/s]\n"
+      "100%|██████████| 86.5M/86.5M [00:14<00:00, 6.21MB/s]\n"
      ]
     },
     {
@@ -257,14 +257,14 @@
       "    SXS:BBH:1441v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1441v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1441v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1441v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 96.0M/96.0M [00:15<00:00, 6.70MB/s]\n"
+      "100%|██████████| 96.0M/96.0M [00:15<00:00, 6.69MB/s]\n"
      ]
     },
     {
@@ -275,14 +275,14 @@
       "    SXS:BBH:1500v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1500v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1500v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1500v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 79.7M/79.7M [00:13<00:00, 6.05MB/s]\n"
+      "100%|██████████| 79.7M/79.7M [00:13<00:00, 6.25MB/s]\n"
      ]
     },
     {
@@ -293,14 +293,14 @@
       "    SXS:BBH:1492v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1492v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1492v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1492v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 78.5M/78.5M [00:13<00:00, 6.25MB/s]\n"
+      "100%|██████████| 78.5M/78.5M [00:12<00:00, 6.43MB/s]\n"
      ]
     },
     {
@@ -311,14 +311,14 @@
       "    SXS:BBH:1465v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1465v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1465v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1465v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 78.6M/78.6M [00:12<00:00, 6.57MB/s]\n"
+      "100%|██████████| 78.6M/78.6M [00:12<00:00, 6.40MB/s]\n"
      ]
     },
     {
@@ -329,14 +329,14 @@
       "    SXS:BBH:1458v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1458v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1458v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1458v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 80.8M/80.8M [00:13<00:00, 6.12MB/s]\n"
+      "100%|██████████| 80.8M/80.8M [00:12<00:00, 6.54MB/s]\n"
      ]
     },
     {
@@ -347,14 +347,14 @@
       "    SXS:BBH:1438v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1438v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1438v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1438v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 85.1M/85.1M [00:14<00:00, 6.34MB/s]\n"
+      "100%|██████████| 85.1M/85.1M [00:13<00:00, 6.46MB/s]\n"
      ]
     },
     {
@@ -365,14 +365,14 @@
       "    SXS:BBH:1430v5/Lev3/metadata.json\n",
       "Found the following files to load from the SXS catalog:\n",
       "    SXS:BBH:1430v5/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5\n",
-      "Downloading to /tmp/sxs-0ivonhkl/cache/SXS:BBH:1430v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
+      "Downloading to /tmp/sxs-__q6k7x3/cache/SXS:BBH:1430v2/Lev3/rhOverM_Asymptotic_GeometricUnits_CoM.h5:\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 88.3M/88.3M [00:15<00:00, 6.12MB/s]\n"
+      "100%|██████████| 88.3M/88.3M [00:14<00:00, 6.36MB/s]\n"
      ]
     }
    ],
@@ -406,26 +406,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.846377077217134\n",
-      "(0.9975542680999092+0j)\n",
-      "(14.127676754137427+2.1667685271158357j)\n",
-      "[[(0.9975542680999092+0j)], [(0.06898717895562242-0.010580596564950012j)], [(0.0036076962805379094-0.0011230639775349621j)]]\n"
+      "Ratio of 22 to 32\n",
+      "Amplitudes:  14.206749598142537\n",
+      "Mixing coefficients:  14.292870121829791\n",
+      "Ratio of 22 to 42\n",
+      "Amplitudes:  73.71597043750567\n",
+      "Mixing coefficients:  inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5513/1851732283.py:51: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  print(\"Mixing coefficients: \", abs(mu_lists[0][0]/mu_lists[2][0]))\n",
+      "/tmp/ipykernel_5513/1851732283.py:51: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  print(\"Mixing coefficients: \", abs(mu_lists[0][0]/mu_lists[2][0]))\n"
      ]
     }
    ],
    "source": [
     "sim = CCE_sim305\n",
     "\n",
-    "t0 = 20\n",
+    "t0 = 0\n",
     "\n",
-    "model_l1 = [(2,2,n,1) for n in range(1+1)]\n",
+    "model_l1 = [(2,2,n,1) for n in range(2+1)] + [(3,2,n,1) for n in range(2+1)] + [(4,2,n,1) for n in range(2+1)] \n",
     "\n",
     "index_220 = model_l1.index((2,2,0,1))\n",
     "\n",
@@ -456,24 +468,83 @@
     "    t0=t0,\n",
     ")\n",
     "\n",
-    "\n",
     "c_220_22 = abs(best_fit_22['C'][index_220])\n",
     "c_220_32 = abs(best_fit_32['C'][index_220])\n",
     "c_220_42 = abs(best_fit_42['C'][index_220])\n",
-    "\n",
-    "print(c_220_22/c_220_32)\n",
     "\n",
     "spherical_modes = [(2,2), (3,2), (4,2)]\n",
     "\n",
     "indices_lists_l = [[lm_mode+mode for mode in [(2,2,0,1)]] for lm_mode in spherical_modes]\n",
     "mu_lists = [qnm.mu_list(indices, sim.chif_mag) for indices in indices_lists_l]\n",
     "\n",
-    "print(mu_lists[0][0])\n",
+    "print(\"Ratio of 22 to 32\")\n",
+    "print(\"Amplitudes: \", c_220_22/c_220_32)\n",
+    "print(\"Mixing coefficients: \", abs(mu_lists[0][0]/mu_lists[1][0]))\n",
     "\n",
-    "print(mu_lists[0][0]/mu_lists[1][0])\n",
+    "print(\"Ratio of 22 to 42\")\n",
+    "print(\"Amplitudes: \", c_220_22/c_220_42)\n",
+    "print(\"Mixing coefficients: \", abs(mu_lists[0][0]/mu_lists[2][0]))\n",
     "\n",
-    "print(mu_lists)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim = CCE_sim305\n",
+    "\n",
+    "t0 = 0\n",
+    "\n",
+    "model_l1 = [(4,4,n,1) for n in range(2+1)] + [(5,4,n,1) for n in range(2+1)] + [(6,4,n,1) for n in range(2+1)] + [(2,2,0,1,2,2,0,1)]\n",
+    "\n",
+    "index_220220 = model_l1.index((2,2,0,1,2,2,0,1))\n",
+    "\n",
+    "best_fit_22 = qnmfits.ringdown_fit(\n",
+    "    sim.times,\n",
+    "    sim.h[4,4],\n",
+    "    model_l1,\n",
+    "    Mf=sim.Mf,\n",
+    "    chif=sim.chif_mag,\n",
+    "    t0=t0,\n",
+    ")\n",
+    "\n",
+    "best_fit_32 = qnmfits.ringdown_fit(\n",
+    "    sim.times,\n",
+    "    sim.h[5,4],\n",
+    "    model_l1,\n",
+    "    Mf=sim.Mf,\n",
+    "    chif=sim.chif_mag,\n",
+    "    t0=t0,\n",
+    ")\n",
+    "\n",
+    "best_fit_42 = qnmfits.ringdown_fit(\n",
+    "    sim.times,\n",
+    "    sim.h[6,4],\n",
+    "    model_l1,\n",
+    "    Mf=sim.Mf,\n",
+    "    chif=sim.chif_mag,\n",
+    "    t0=t0,\n",
+    ")\n",
+    "\n",
+    "c_220220_44 = abs(best_fit_22['C'][index_220220])\n",
+    "c_220220_54 = abs(best_fit_32['C'][index_220220])\n",
+    "c_220220_64 = abs(best_fit_42['C'][index_220220])\n",
+    "\n",
+    "spherical_modes = [(4,4), (5,4), (6,4)]\n",
+    "\n",
+    "indices_lists_q = [[lm_mode+mode for mode in [(2,2,0,1,2,2,0,1)]] for lm_mode in spherical_modes]\n",
+    "alpha_lists = [qnm.alpha(indices, sim.chif_mag) for indices in indices_lists_q]\n",
+    "\n",
+    "print(\"Ratio of 44 to 54\")\n",
+    "print(\"Amplitudes: \", c_220220_44/c_220220_54)\n",
+    "print(\"Mixing coefficients: \", abs(alpha_lists[0][0]/alpha_lists[1][0]))\n",
+    "\n",
+    "print(\"Ratio of 44 to 64\")\n",
+    "print(\"Amplitudes: \", c_220220_44/c_220220_64)\n",
+    "print(\"Mixing coefficients: \", abs(alpha_lists[0][0]/alpha_lists[2][0]))\n"
    ]
   }
  ],
